<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginEnd="@dimen/margin_16"
        android:text="@string/progres_day_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_40"
        android:text="@string/step_today"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_title" />

    <TextView
        android:id="@+id/profile_steps_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        app:layout_constraintBottom_toBottomOf="@+id/profile_steps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_steps"
        tools:text="10" />

    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
        android:id="@+id/profile_progress"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@+id/profile_steps_value"
        app:rcAnimationEnable="true"
        app:rcAnimationSpeedScale="1"
        app:rcBackgroundColor="#0A000000"
        app:rcBackgroundPadding="4dp"
        app:rcMax="10000"
        app:rcProgress="50"
        app:rcProgressColors="@array/sample_progress_gradient"
        app:rcRadius="30dp" />

    <TextView
        android:id="@+id/profile_steps_freq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_40"
        android:text="@string/frequency_steps"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_progress" />

    <TextView
        android:id="@+id/profile_steps_freq_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        app:layout_constraintBottom_toBottomOf="@+id/profile_steps_freq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_steps_freq"
        tools:text="10" />

    <TextView
        android:id="@+id/profile_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_40"
        android:text="@string/profile_calories_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_15"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_steps_freq" />

    <TextView
        android:id="@+id/profile_calories_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginEnd="@dimen/margin_16"
        android:background="@drawable/background_circle"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_calories"
        tools:text="80" />


</androidx.constraintlayout.widget.ConstraintLayout>